--- a/gatoma_proj.html
+++ b/gatoma_proj.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
         <link rel="stylesheet" href="css/sprojs.css">
-        <title>O Gato Amado e a Andorinha Sinhá, uma história de amor | sem destino a</title>
+        <title>O Gato Malhado e a Andorinha Sinhá, uma história de amor | sem destino a</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
         <style>
             .sproj_intro{
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div id="sprojmain">
-            <div class="sproj_titl">O Gato Amado e a Andorinha Sinhá, uma história de amor<br><p style="font-size:60%;margin-bottom:0;">de Jorge Amado</p></div>
+            <div class="sproj_titl">O Gato Malhado e a Andorinha Sinhá, uma história de amor<br><p style="font-size:60%;margin-bottom:0;">de Jorge Amado</p></div>
             <div class="sproj_hold">
                 <div class="sproj_stitl">Projecto de Design Editorial I</div>
                 <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt3" target="_self">de livro em livro</a> > <a class="sproj_links" href="proj.html#vt3s1" target="_self">Edições Revisitadas</a></div>
