--- a/joalourenco.html
+++ b/joalourenco.html
@@ -79,7 +79,7 @@
                         </a>
                         <a class="profl_tbox1b" href="gatoam_proj.html" target="_self">
                         <div class="profl_timg1" style="background-image: url(css/img/dlivroalivro/edirev/joana_lourenco_p1/capa.jpg)"></div>
-                            <div class="profl_ttitl">O Gato Amado e a Andorinha Sinhá, uma história de amor<br><p style="font-size:80%;margin-bottom:0;">de Jorge Amado</p></div>
+                            <div class="profl_ttitl">O Gato Malhado e a Andorinha Sinhá, uma história de amor<br><p style="font-size:80%;margin-bottom:0;">de Jorge Amado</p></div>
                             <div class="profl_ttxt">Livro</div>
                         </a>
                     </div>
