--- a/proj.html
+++ b/proj.html
@@ -609,9 +609,9 @@
                             <div class="proj_ttitl">2001: Space Odyssey<br><p style="font-size:80%;margin-bottom:0;">de Arthur C. Clarke</p></div>
                             <div class="proj_ttxt">Livro</div>
                         </a>
-                        <a class="proj_tbox1e" href="gatoam_proj.html" target="_self">
+                        <a class="proj_tbox1e" href="gatoma_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/dlivroalivro/edirev/joana_lourenco_p1/capa.jpg)"></div>
-                            <div class="proj_ttitl">O Gato Amado e a Andorinha Sinhá, uma história de amor<br><p style="font-size:80%;margin-bottom:0;">de Jorge Amado</p></div>
+                            <div class="proj_ttitl">O Gato Malhado e a Andorinha Sinhá, uma história de amor<br><p style="font-size:80%;margin-bottom:0;">de Jorge Amado</p></div>
                             <div class="proj_ttxt">Livro</div>
                         </a>
                         <a class="proj_tbox2d" href="intermit_proj.html" target="_self">
