--- a/proj.html
+++ b/proj.html
@@ -924,12 +924,12 @@
                             <div class="proj_ttitl">O caminho da Europa: escolher aquilo em que acreditamos</div>
                             <div class="proj_ttxt">Série Fotográfica</div>
                         </a>
-                        <a class="proj_tbox1c" href="umpombpous_proj.html" target="_self">
+                        <a class="proj_tbox1d" href="umpombpous_proj.html" target="_self">
                             <div class="proj_timg1" style="background-image: url(css/img/r1/catarina_correia/capa.jpg)"></div>
                             <div class="proj_ttitl">“um pombo pousou num ramo a reflectir sobre a existência”</div>
                             <div class="proj_ttxt">Série Fotográfica</div>
                         </a>
-                        <a class="proj_tbox1d" href="olhrindivid_proj.html" target="_self">
+                        <a class="proj_tbox1a" href="olhrindivid_proj.html" target="_self">
                             <div class="proj_timg1" style="background-image: url(css/img/r1/david_santos/capa.jpg)"></div>
                             <div class="proj_ttitl">Olhar Individual</div>
                             <div class="proj_ttxt">Série Fotográfica</div>
