--- a/expo.html
+++ b/expo.html
@@ -52,7 +52,6 @@
                     <a class="np_social" style="mask-image:url(css/img/faceic.svg);-webkit-mask-image:url(css/img/faceic.svg);"href="#" onclick='window.open("https://www.facebook.com/semdestinoa/");return false;'></a>
                 </div>
             </div>
-
         </div>
         <div id="expomain">
             <div class="expo_holda">
@@ -67,11 +66,19 @@
                             <div class="expo_datetxtb"><b>LxFactory</b> 23 Nov - 8 Dez</div>
                         </div>
                         <div class="expo_datetxtc">
-                        <p>A Exposição "Sem destino a" ganha forma em dois espaços distintos, assumindo em cada um deles uma perspectiva distinta sobre o percurso conceptual, crítico e criativo dos alunos finalistas. A apresentação feita nas Galerias da FBAUL centra-se na exploração individual desenvolvida nas diferentes disciplinas que lhes permite construir o seu próprio caminho enquanto enquanto autores e comunicadores. Já no LxFactory, a temática da Europa impõe-se através do conjunto de projectos elaborados no âmbito desta temática explorada ao longo do último semestre. Estes dois núcleos constituem, assim, a Exposição de Finalistas de Design de Comunicação de 2017. Sem destino concreto, com muitas vias percorridas e por percorrer, mas com a certeza de que o fim nunca está próximo. Daqui para a frente, será o começo de uma nova etapa enquanto jovens profissionais, enquanto cidadãos, enquanto europeus, e claro, sem destino a _______.</p>
+                        <p>A Exposição "Sem destino a" ganha forma em dois espaços distintos, assumindo em cada um deles uma perspectiva distinta sobre o percurso conceptual, crítico e criativo dos alunos finalistas. A apresentação feita nas Galerias da FBAUL centra-se na exploração individual desenvolvida nas diferentes disciplinas que lhes permite construir o seu próprio caminho enquanto enquanto autores e comunicadores. Já no LxFactory, a temática da Europa impõe-se através do conjunto de projectos elaborados no âmbito desta temática explorada ao longo do último semestre. Estes dois núcleos constituem, assim, a Exposição de Finalistas de Design de Comunicação de 2017. Sem destino concreto, com muitas vias percorridas e por percorrer, mas com a certeza de que o fim nunca está próximo. Daqui para a frente, será o começo de uma nova etapa enquanto jovens profissionais, enquanto cidadãos, enquanto europeus, e claro, sem destino a _.</p>
                         </div>
                     </div>
                 </div>
-                <div class="expo_holdc">
+            </div>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="css/img/exposicao_temp_img.jpg" style="width:100%">
+                </div>
+            </div>
+            <!--
+            <div class="expo_holda">
+            <div class="expo_holdc">
                     <div class="expo_subtitl"><b>FBAUL</b><br>sem destino a</div>
                 </div>
             </div>
@@ -185,6 +192,7 @@
                 </div>
                 <div class="expo_btxtb">para mais registos, visite as nossas páginas no Facebook e Instagram!</div>
             </div>
+            -->
         </div>
         <div id="foot">
             <div id="footword">
