--- a/patrmedeiros.html
+++ b/patrmedeiros.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
         <link rel="stylesheet" href="css/profl.css">
-        <title>Patrícia Medeiros | sem destino a</title>
+        <title>Patrícia Bizarro Medeiros | sem destino a</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
@@ -55,7 +55,7 @@
         </div>
         <div id="proflmain">
             <div class="profl_sec">
-                <div class="profl_titl">Patrícia Medeiros</div>
+                <div class="profl_titl">Patrícia Bizarro Medeiros</div>
                 <div class="profl_links"><a class="profl_link" href="mailto:patriciabizarromedeiros@gmail.com" target="_blank">patriciabizarromedeiros@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://www.behance.net/patriciabia191");return false;'>behance.net/patriciabia191</a></div>
             </div>
             <div class="profl_tplaygrnd1">
