--- a/expo.html
+++ b/expo.html
@@ -129,7 +129,7 @@
                             <div class="expo_chotxt">ver agenda</div>
                         </a>
                         <div class="expo_choice2">
-                            <div class="expo_choimg" style="background-image: url(css/img/img3.jpg)"><div class="expo_over"></div></div>
+                            <div class="expo_choimg" style="background-image: url(css/img/ver_agenda_fbaul.jpg)"><div class="expo_over"></div></div>
                             <div class="expo_chotxt">visita virtual</div>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="expo_holde">
                         <a class="expo_choice1" href="agend.html" target="_self">
-                            <div class="expo_choimg" style="background-image: url(css/img/img6.jpg)"><div class="expo_over"></div></div>
+                            <div class="expo_choimg" style="background-image: url(css/img/ver_agenda_fbaul.jpg)"><div class="expo_over"></div></div>
                             <div class="expo_chotxt">ver agenda</div>
                         </a>
                         <div class="expo_choice2">
