--- a/mafldcintra.html
+++ b/mafldcintra.html
@@ -101,7 +101,7 @@
                             <div class="profl_ttitl">por tempo indeterminado</div>
                             <div class="profl_ttxt">Projecto Fotográfico Autoral</div>
                         </a>
-                        <a class="profl_tbox1d" href="quandoaproeu_proj.html" target="_self">
+                        <a class="profl_tbox1a" href="quandoaproeu_proj.html" target="_self">
                         <div class="profl_timg1" style="background-image: url(css/img/o1/mafalda_cintra/capa.jpg)"></div>
                             <div class="profl_ttitl">Quando ouvimos alguém pronunciar a palavra Europa</div>
                             <div class="profl_ttxt">Discurso / Storyboard e Guião</div>
