--- a/catserafim.html
+++ b/catserafim.html
@@ -56,7 +56,7 @@
         <div id="proflmain">
             <div class="profl_sec">
                 <div class="profl_titl">Catarina Serafim</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:catserafimillustration@gmail.com" target="_blank">catserafimillustration@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://catserafim.weebly.com");return false;'>catserafim.weebly.com</a></div>
+                <div class="profl_links"><a class="profl_link" href="mailto:catserafimillustration@gmail.com" target="_blank">catserafimillustration@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://catserafimfolio.cargocollective.com/");return false;'>catserafimfolio.cargocollective.com</a></div>
             </div>
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
