--- a/estlugarmeu_proj.html
+++ b/estlugarmeu_proj.html
@@ -104,7 +104,7 @@
                     <img src="css/img/retdluz/carolinacouto/1.jpg" style="width:100%;height: auto;">
                 </div>
                 <div class="mySlides fade">
-                    <img src="css/img/retdluz/carolinacouto/2.JPG" style="width:100%;height: auto;">
+                    <img src="css/img/retdluz/carolinacouto/2.jpg" style="width:100%;height: auto;">
                 </div>
                 <div class="mySlides fade">
                     <img src="css/img/retdluz/carolinacouto/4.jpg" style="width:100%;height: auto;">
