--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div id="head_shirt">
                 <div id="shirttxt">
                     <div class="headtitl"><b>Exposição de Finalistas de Design de Comunicação</b></div>
-                    <div class="headtxt">2016/2017</div>
+                    <div class="headtxt">2017</div>
                     <div class="headtxt2">Faculdade de Belas-Artes da Universidade de Lisboa</div>
                     <div class="headdateh">
                         <div class="headdates"><b>FBAUL</b></div> <div class="headdates"><t>2 - 15 Nov</t></div>
