--- a/josoromenho.html
+++ b/josoromenho.html
@@ -56,7 +56,7 @@
         <div id="proflmain">
             <div class="profl_sec">
                 <div class="profl_titl">João Soromenho</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:joao_soromenho@hotmail.com" target="_blank">joao_soromenho@hotmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://planethunter.wixsite.com/meta");return false;'>planethunter.wixsite.com</a></div>
+                <div class="profl_links"><a class="profl_link" href="mailto:joao_soromenho@hotmail.com" target="_blank">joao_soromenho@hotmail.com</a></div>
             </div>
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
