--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                     <!-- FaceWidget -->
                         <div class="fb-page" data-href="https://www.facebook.com/semdestinoa/" data-tabs="timeline" data-width="350" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" style="width: 100%;height:100%;"><blockquote cite="https://www.facebook.com/semdestinoa/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/semdestinoa/">&lt;Sem destino a /&gt;</a></blockquote></div>
                     </div>
-                    <div class="hmain_soico" style="background-image: url(css/img/instaic.svg)"></div>
-                        <div class="hmain_soico"style="background-image: url(css/img/faceic.svg)"></div>
+                    <a class="hmain_soico" style="background-image: url(css/img/instaic.svg)"href="#" onclick='window.open("https://www.instagram.com/semdestinoa/");return false;'></a>
+                    <a class="hmain_soico"style="background-image: url(css/img/faceic.svg)"href="#" onclick='window.open("https://www.facebook.com/semdestinoa/");return false;'></a>
                 </div>
             </div>
         </div>
