--- a/agend.html
+++ b/agend.html
@@ -93,6 +93,7 @@
                 </div>
                 </div>
             </div>
+            <!--
             <div class="age_hold">
                 <div class="age_stitl">eventos anteriores</div>
                 <div class="age_holdb">
@@ -112,7 +113,7 @@
                         <div class="age_eatxt">Local</div>
                     </a>
                 </div>
-            </div>
+            </div>-->
         </div>
         <div id="foot">
             <div id="footword">
