--- a/sobre.html
+++ b/sobre.html
@@ -75,6 +75,10 @@
                 </div>
             </div>
             <div class="s_stitl2">publicação</div>
+             <div class="slideshow-container2">
+                    <img src="css/img/sobre_publi.jpg" style="width:100%">
+            </div>
+            <!--
             <div class="slideshow-container">
                 <div class="mySlides fade">
                     <img src="css/img/img1.jpg" style="width:100%">
@@ -104,7 +108,7 @@
                     <span class="dot" onclick="currentSlide(5)"></span>
                     <span class="dot" onclick="currentSlide(6)"></span>
                 </div>
-            </div>
+            </div>-->
             <div class="etap_hold">
                 <div class="s_btxt">Uma apresentação de alguns dos trabalhos dos alunos finalistas, inseridos em diferentes disciplinas do campo do Design de Comunicação.  Inclui textos de alunos, de docentes da Área, e ainda, um texto do Professor Viriato Soromenho-Marques sobre a situação actual da Europa. Disponível para venda na FBAUL e no LxFactory nas respectivas datas.</div>
                 <!--<a class="s_btxt2">comprar</a>-->
