--- a/agend.html
+++ b/agend.html
@@ -62,7 +62,8 @@
             <div class="age_holda">
                 <div class="age_localh">
                     <div class="age_locals1">Galerias FBAUL</div>
-                    <div class="age_locals2">LX Factory</div>
+                    <!--
+                    <div class="age_locals2">LX Factory</div>-->
                 </div>
                 <iframe class="age_localv" src=""></iframe>
             </div>
