--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div id="head_wrap">
             <div class="vid_wrap">
-            <iframe id="head_vid" src="https://www.youtube.com/embed/J5Q6Vebzsb8?autoplay=1&controls=0&mute=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0&start=1" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
+            <iframe id="head_vid" src="https://www.youtube.com/embed/J5Q6Vebzsb8?autoplay=1&loop=1&controls=0&mute=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0&start=1" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
             </div>
             <div id="head_shirt">
                 <div id="shirttxt">
@@ -133,7 +133,7 @@
                 <div class="hmain_blkt1">
                     <div class="hmain_blk1">
                         <div class="hmain_btxt1">
-                            <p>Uma Exposição dividida em dois locais e focada no trabalho desenvolvido pela turma ao longo do último ano de Licenciatura em diferentes disciplinas. Uma tomada de posição colectiva face à temática Europa, baseada em múltiplas referências políticas, sociais e culturais, passadas e presentes, que é levada para fora da Faculdade e connosco, seja qual for o destino.</p>
+                            <p>Uma Exposição dividida em dois locais e focada no trabalho desenvolvido pela turma ao longo do último ano de Licenciatura. “Sem destino a” concentra-se no processo por trás da metodologia do Design de Comunicação, dando particular atenção à construção de uma ideia de Europa colectiva no núcleo “State of Emergency”: uma tomada de posição baseada em múltiplas referências políticas, sociais e culturais, sem rumo concreto.</p>
                         </div>
                         <a class="hmoreico" href="expo.html" target="_self">+</a>
                     </div>
