--- a/deareu_eve.html
+++ b/deareu_eve.html
@@ -177,7 +177,10 @@ img{
   to {opacity: 1}
 }
             .text {
-  color: rgb(255,255,255);
+                box-sizing: border-box;
+                padding: 10px;
+                background-color: rgb(255,255,255);
+  color: rgb(240,132,101);
   font-size: 16px;
   position: absolute;
                 left: 0;
