--- a/expo.html
+++ b/expo.html
@@ -66,7 +66,7 @@
                             <div class="expo_datetxtb"><b>LX Factory</b> 23 NOV - 10 DEZ</div>
                         </div>
                         <div class="expo_datetxtc">
-                        <p>A Exposição "Sem destino a" ganha forma em dois espaços distintos, assumindo em cada um deles uma perspectiva distinta sobre o percurso conceptual, crítico e criativo dos alunos finalistas. A apresentação feita nas Galerias da FBAUL centra-se na exploração individual desenvolvida nas diferentes disciplinas que lhes permite construir o seu próprio caminho enquanto enquanto autores e comunicadores. Já no LxFactory, a temática da Europa impõe-se através do conjunto de projectos elaborados no âmbito desta temática explorada ao longo do último semestre. Estes dois núcleos constituem, assim, a Exposição de Finalistas de Design de Comunicação de 2017. Sem destino concreto, com muitas vias percorridas e por percorrer, mas com a certeza de que o fim nunca está próximo. Daqui para a frente, será o começo de uma nova etapa enquanto jovens profissionais, enquanto cidadãos, enquanto europeus, e claro, sem destino a _.</p>
+                        <p>A Exposição “Sem destino a” ganha forma em dois espaços distintos, assumindo duas abordagens distintas com base no percurso conceptual, crítico e criativo dos alunos finalistas. Concentra-se na exploração criativa individual e no processo por trás da metodologia do Design de Comunicação, dando particular atenção à construção de uma ideia de Europa colectiva no núcleo “State of Emergency”: uma tomada de posição colectiva assente em múltiplas referências políticas, sociais e culturais, sem rumo concreto.</p><p>Os dois momentos expositivos constituem, assim, a Exposição de Finalistas de Design de Comunicação de 2017. Sem destino concreto, com muitas vias percorridas e por percorrer, mas com a certeza de que o fim nunca está próximo. Daqui para a frente, será o começo de uma nova etapa enquanto jovens profissionais, enquanto cidadãos, enquanto europeus, e claro, sem destino a.</p>
                         </div>
                     </div>
                 </div>
@@ -133,10 +133,10 @@
                         </div>-->
                     </div>
                 </div>
-                
+                <!--
                 <div class="expo_holdc">
                     <div class="expo_subtitl"><b>LxFactory</b><br>sem destino a qqr coisa</div>
-                </div>
+                </div>-->
             </div>
            <!--
             <div class="slideshow-container2">
@@ -174,7 +174,7 @@
                     <span class="dot2" onclick="currentSlide2(5)"></span>
                     <span class="dot2" onclick="currentSlide2(6)"></span>
                 </div>
-            </div>-->
+            </div>
             <div class="expo_holda">
                 <div class="expo_holdb">
                     <div class="expo_datetxtd">
@@ -185,14 +185,13 @@
                             <div class="expo_choimg" style="background-image: url(css/img/ver_agenda_fbaul.jpg)"><div class="expo_over"></div></div>
                             <div class="expo_chotxt">ver agenda</div>
                         </a>
-                        <!--
                         <div class="expo_choice2">
                             <div class="expo_choimg" style="background-image: url(css/img/img7.jpg)"><div class="expo_over"></div></div>
                             <div class="expo_chotxt">visita virtual</div>
-                        </div>-->
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="expo_btxtb">para mais registos, visite as nossas páginas no Facebook e Instagram!</div>
         </div>
         <div id="foot">
