--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div id="head_wrap">
             <div class="vid_wrap">
-            <iframe id="head_vid" src="https://www.youtube.com/embed/J5Q6Vebzsb8?autoplay=1&loop=1&controls=0&mute=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0&start=1" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
+            <iframe id="head_vid" src="https://www.youtube.com/embed/J5Q6Vebzsb8?autoplay=1&loop=1&controls=0&mute=1&modestbranding=1&rel=0&showinfo=0&start=1&playlist=J5Q6Vebzsb8" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
             </div>
             <div id="head_shirt">
                 <div id="shirttxt">
@@ -163,6 +163,7 @@
                         </div>
                     </div>
                     <a class="hmain_ablk1" href="#" onclick='window.open("https://www.facebook.com/events/128351081199952/");return false;'>
+                        <div class="ablk_over"></div>
                         <div class="hmain_apics" style="background-image: url(css/img/events/agend/inauguracao.jpg);">
                             <div class="apics_over"></div>
                         </div>
@@ -171,6 +172,7 @@
                         <div class="hmain_attxt">FBAUL</div>
                     </a>
                     <div class="hmain_ablk2">
+                        <div class="ablk_over"></div>
                         <div class="hmain_apics" style="background-image: url(css/img/events/agend/apresentacao.jpg);">
                         </div>
                         <div class="hmain_adate">10 Nov</div>
@@ -178,6 +180,7 @@
                         <div class="hmain_attxt">FBAUL</div>
                     </div>
                     <div class="hmain_ablk3">
+                        <div class="ablk_over"></div>
                         <div class="hmain_apics" style="background-image: url(css/img/events/agend/conversa.jpg);">
                         </div>
                         <div class="hmain_adate">13 Nov</div>
