--- a/proj.html
+++ b/proj.html
@@ -55,7 +55,7 @@
         </div>
         <div id="head_wrap">
             <div class="vid_wrap">
-            <iframe id="head_vid" src="https://www.youtube.com/embed/qJmJPRmdGQ4?autoplay=1&loop=1&controls=0&mute=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0&start=1" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
+            <iframe id="head_vid" src="https://www.youtube.com/embed/qJmJPRmdGQ4?autoplay=1&loop=1&controls=0&mute=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0&start=1&playlist=qJmJPRmdGQ4" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
             </div>
             <div id="hprojshirt">
                 <div id="hps_stamp">
