--- a/age_lxfac.html
+++ b/age_lxfac.html
@@ -13,32 +13,32 @@
         <div class="ageifrm_m">
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img2.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">date - Ter. a Dom.<br>10h00 às 19h00</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img3.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">date - Ter. a Dom.<br>10h00 às 19h00</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img7.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">date - Ter. a Dom.<br>10h00 às 19h00</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img1.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">date - Ter. a Dom.<br>10h00 às 19h00</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img4.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">date - Ter. a Dom.<br>10h00 às 19h00</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img5.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">date - Ter. a Dom.<br>10h00 às 19h00</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
         </div>
