--- a/age_fbaul.html
+++ b/age_fbaul.html
@@ -13,29 +13,29 @@
         <div class="ageifrm_m">
             <a class="ifrm_box" href="#" onclick='window.open("https://www.facebook.com/events/128186101176923/");return false;'>
                 <div class="ifrm_pics" style="background-image: url(css/img/events/agend/documentario.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">28 Out - Seg. a Sex.<br>10h00 às 18h00</div>
+                <div class="ifrm_date">28 Out</div>
                 <div class="ifrm_titl">Exibição do documentário “Europe After Hours”</div>
                 <div class="ifrm_txt">Europe After Hours é um projeto que parte do mote “boémia noturna” para uma série de perguntas e respostas relativamente à cultura noturna europeia.</div>
             </a>
             <a class="ifrm_box" href="#" onclick='window.open("https://www.facebook.com/events/128351081199952/");return false;'>
                 <div class="ifrm_pics" style="background-image: url(css/img/events/agend/inauguracao.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">2 Nov - Seg. a Sex.<br>10h00 às 18h00</div>
+                <div class="ifrm_date">2 Nov</div>
                 <div class="ifrm_titl">Inauguração da Exposição de Finalistas de Design de Comunicação</div>
             </a>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/events/agend/jogo.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">6 Nov - Seg. a Sex.<br>10h00 às 18h00</div>
+                <div class="ifrm_date">6 Nov</div>
                 <div class="ifrm_titl">Jogo “Check-out”</div>
                 <div class="ifrm_txt">O projeto “check-out” pretende simular uma Europa em constante mudança através de um jogo de estratégia que põe à prova os teus conhecimentos.</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/events/agend/apresentacao.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">10 Nov - Seg. a Sex.<br>10h00 às 18h00</div>
+                <div class="ifrm_date">10 Nov</div>
                 <div class="ifrm_titl">Apresentação do projecto “Sem destino a”</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/events/agend/conversa.jpg)"><div class="ifrm_over"></div></div>
-                <div class="ifrm_date">13 Nov - Seg. a Sex.<br>10h00 às 18h00</div>
+                <div class="ifrm_date">13 Nov</div>
                 <div class="ifrm_titl">como chegas à tua identidade enquanto designer?</div>
                 <div class="ifrm_txt">Conversa com Sílvia Matias, Studio AH HA e Marco Balesteros</div>
             </div>
