--- a/agend.html
+++ b/agend.html
@@ -54,9 +54,10 @@
             </div>
         </div>
         <div id="agendmain">
-            <div class="age_holda">
+            <div class="age_holdc">
                 <div class="age_titl">agenda
-                    <a class="age_titllink">download da agenda</a></div>
+                    <!--
+                    <a class="age_titllink">download da agenda</a>--></div>
                 <div class="age_btxt"><p>Acompanha os próximos eventos na Faculdade de Belas-Artes de Lisboa e no LX Factory!</p></div>
             </div>
             <div class="age_holda">
