--- a/expo.html
+++ b/expo.html
@@ -191,8 +191,8 @@
                         </div>
                     </div>
                 </div>
-            </div>-->
-            <div class="expo_btxtb">para mais registos, visite as nossas páginas no Facebook e Instagram!</div>
+            </div>
+            <div class="expo_btxtb">para mais registos, visite as nossas páginas no Facebook e Instagram!</div>-->
         </div>
         <div id="foot">
             <div id="footword">
