--- a/raqlsancho.html
+++ b/raqlsancho.html
@@ -56,7 +56,7 @@
         <div id="proflmain">
             <div class="profl_sec">
                 <div class="profl_titl">Raquel Sancho</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:raquelmsancho96@gmail.com" target="_blank">raquelmsancho96@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("http://www.behance.net/raquelsancho");return false;'>behance.net/raquelsancho</a></div>
+                <div class="profl_links"><a class="profl_link" href="mailto:raquelsancho.rms@gmail.com" target="_blank">raquelsancho.rms@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("http://www.behance.net/raquelsancho");return false;'>behance.net/raquelsancho</a></div>
             </div>
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
