--- a/sobre.html
+++ b/sobre.html
@@ -145,7 +145,7 @@
                             </div>
                             <div class="s_fiblks">
                             <div class="s_fstitl">apoio à produção</div>
-                            <div class="s_ftxt">David Santos<br>Joana Lourenço<br>Ana Beatriz Nunes<br>Marta Antunes<br>Raquel Monteiro<br>Rodrigo Silvo</div>
+                            <div class="s_ftxt">Abel Quental <br>Ana Manana<br>Beatriz Sapata<br>David Santos<br>David Antunes<br>Diogo Tomás<br>Hugo Batista<br>Inês Ferreira<br>Inês Pedro Borges<br>Joana Lourenço<br>João Andrade<br>João Aragão<br>João Reis<br>Manuel Couto<br>Ana Beatriz Nunes<br>Marta Antunes<br>Marta Saraiva<br>Pedro Alves<br>Paulo Dias<br>Raquel Monteiro<br>Raquel Sancho<br>Rodrigo Silva<br>Sara Jorge<br>Sara Rodrigues</div>
                             </div>
                             <div class="s_fiblks">
                             <div class="s_fstitl">produção dos expositores</div>
@@ -183,7 +183,11 @@
                             </div>
                             <div class="s_fiblks">
                             <div class="s_fstitl">apoio à implementação</div>
-                            <div class="s_ftxt">João Ferreira<br>Carlos Silva</div>
+                            <div class="s_ftxt">João Ferreira<br>Pedro Almeida</div>
+                            </div>
+                            <div class="s_fiblks">
+                            <div class="s_fstitl">tradução do website</div>
+                            <div class="s_ftxt">Ana Inês Camões</div>
                             </div>
                         </div>
                     </div>
@@ -199,12 +203,8 @@
                             </div>
                             <div class="s_fblks" style="margin: 0;width: auto;">
                             <div class="s_ftitl">edição de vídeo</div>
-                            <div class="s_ftxt">Catarina Correia</div>
+                            <div class="s_ftxt">Catarina Correia<br>Leonor Carvalho</div>
                             </div>
-                        </div>
-                        <div class="s_fblks">
-                            <div class="s_ftitl">apoio à edição de som</div>
-                            <div class="s_ftxt">Miguel Solano</div>
                         </div>
                     </div>
                     <div class="s_holdfsec1">
@@ -215,7 +215,7 @@
                         </div>
                         <div class="s_fblks">
                             <div class="s_ftitl">tradução</div>
-                            <div class="s_ftxt">Catarina Serafim<br>Ana Inês Camões</div>
+                            <div class="s_ftxt">Ana Inês Camões</div>
                         </div>
                         </div>
                         <div class="s_holdfsec3" style="justify-content: flex-end;-webkit-justify-content: flex-end;">
