--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div id="head_wrap">
             <div class="vid_wrap">
-            <iframe id="head_vid" src="https://www.youtube.com/embed/J5Q6Vebzsb8?autoplay=1&loop=1&controls=0&mute=1&modestbranding=1&rel=0&showinfo=0&start=1&playlist=J5Q6Vebzsb8" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
+            <iframe id="head_vid" src="https://www.youtube.com/embed/J5Q6Vebzsb8?autoplay=1&loop=1&controls=0&mute=1&modestbranding=1&rel=0&showinfo=0&start=1&playlist=J5Q6Vebzsb8&vq=hd1080" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
             </div>
             <div id="head_shirt">
                 <div id="shirttxt">
@@ -86,7 +86,7 @@
             <div class="closex">x</div>
             <iframe id="main_vid" src="" frameborder="0" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
         </div>
-        <div id="hmain_cont">
+        <div class="hmain_cont">
             <div class="hmain_secs">
                 <div class="hmain_titl">sobre</div>
                 <div class="hmain_blkt1">
@@ -99,7 +99,9 @@
                     <div id="hmain_simg1"></div>
                 </div>
             </div>
+        </div>
             <div class="hmain_secp">
+                <div class="hmain_cont">
                 <div class="hmain_blkt2" style="margin: 0px;">
                     <div class="hmain_titl2"style="color: rgb(255,255,255);">projectos</div>
                     <div class="hmain_blkt5">
@@ -125,6 +127,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="hmain_cont">
             <div class="hmain_sece">
                 <div class="hmain_blkt2">
                     <div class="hmain_titl">exposição</div>
@@ -193,7 +197,8 @@
                 </div>
             </div>
             <div class="hmain_secr">
-                <div class="hmain_titl">segue-nos nas redes sociais! - @semdestinoa<p style="font-size: 40%; margin-top: 10px;">utiliza o hashtag #semdestinoa para nos identificares</p></div>
+                <!--
+                <div class="hmain_titl">segue-nos nas redes sociais! - @semdestinoa<p style="font-size: 40%; margin-top: 10px;">utiliza o hashtag #semdestinoa para nos identificares</p></div>-->
                 <div class="hmain_blkt4">
                     <div class="hsocialbox">
                         <!-- SnapWidget -->
